apps/desktop/src-tauri/src/prompts/snapshots/testing_ide_lib__prompts__snapshots__test_plan_v1_messages.snap
---
source: src/prompts/snapshots.rs
expression: dump_messages(&msgs)
---
- role: system
  text: "You are a senior QA architect producing a test plan for the supplied project. The plan ships to a human reviewer and must be auditable.\n\nRules:\n- Reference specific files, functions, and modules from the supplied context. Do NOT invent code that does not appear.\n- Identify edge cases from the code logic, not generic checklists.\n- Prioritize risks by impact * likelihood, not by alphabetical order.\n- When a section cannot be filled from the supplied context, leave the array empty rather than fabricating items.\n- Always invoke the `emit_test_plan` tool with the structured payload. Never reply with free-form prose."
- role: user
  text: "# Project: fixture-project\n\nScope: auth module\n\n## Project context (auto-generated)\n\nFixture summary used for snapshot tests.\n\n## Relevant code\n\n--- chunk 1 | function `login` (lines 10–25) ---\nfunction login(creds) { return verify(creds); }\n\n\n--- chunk 2 | class `SessionStore` (lines 30–60) ---\nclass SessionStore { /* ... */ }\n\n\n\n\nNow invoke `emit_test_plan` with the structured plan."
