apps/desktop/src-tauri/src/prompts/snapshots/testing_ide_lib__prompts__snapshots__test_plan_v1_tool.snap
---
source: src/prompts/snapshots.rs
expression: "test_plan_v1::tool().parameters_schema"
---
additionalProperties: false
properties:
  entryCriteria:
    items:
      minLength: 1
      type: string
    type: array
  environments:
    items:
      minLength: 1
      type: string
    type: array
  exitCriteria:
    items:
      minLength: 1
      type: string
    type: array
  objectives:
    items:
      minLength: 1
      type: string
    type: array
  risks:
    items:
      additionalProperties: false
      properties:
        description:
          minLength: 1
          type: string
        mitigation:
          minLength: 1
          type: string
      required:
        - description
      type: object
    type: array
  scopeIn:
    items:
      minLength: 1
      type: string
    type: array
  scopeOut:
    items:
      minLength: 1
      type: string
    type: array
  strategy:
    maxLength: 2000
    minLength: 1
    type: string
  summary:
    maxLength: 1500
    minLength: 1
    type: string
required:
  - summary
  - objectives
  - scopeIn
  - scopeOut
  - strategy
  - environments
  - risks
  - entryCriteria
  - exitCriteria
type: object
