apps/desktop/src-tauri/src/prompts/snapshots/testing_ide_lib__prompts__snapshots__test_plan_v2_messages.snap
---
source: src/prompts/snapshots.rs
expression: dump_messages(&msgs)
---
- role: system
  text: "You are a senior QA architect producing a test plan for the supplied project. The plan ships to a human reviewer and must be auditable.\n\nRules:\n- Reference specific files, functions, and modules from the supplied context. Do NOT invent code that does not appear.\n- Identify edge cases from the code logic, not generic checklists.\n- Prioritize risks by impact * likelihood, not by alphabetical order.\n- `scope.inScope` / `scope.outOfScope` name concrete modules, files, or features — never vague areas like 'the backend'.\n- `entryCriteria` are preconditions to start testing; `exitCriteria` define done; `suspensionCriteria` state when testing pauses (e.g. blocking defect rate, environment outage) and what resumes it.\n- `testLevels` and `testTypes` pick only the values justified by the supplied code; `deliverables` lists the concrete documents/artifacts this plan commits to producing.\n- When a section cannot be filled from the supplied context, leave the array empty rather than fabricating items.\n- Always invoke the `emit_test_plan` tool with the structured payload. Never reply with free-form prose.\n\nThe structured payload MUST have the following JSON structure:\n{\n  \"summary\": \"One-paragraph overview of the test plan\",\n  \"objectives\": [\"Objective 1\", \"Objective 2\"],\n  \"scope\": {\n    \"inScope\": [\"Module/feature in scope 1\"],\n    \"outOfScope\": [\"Module/feature out of scope 1\"]\n  },\n  \"strategy\": \"Description of the test strategy\",\n  \"testLevels\": [\"unit | integration | system | e2e | acceptance\"],\n  \"testTypes\": [\"functional | performance | security | usability | reliability | compatibility | regression\"],\n  \"environments\": [\"Environment 1\"],\n  \"risks\": [\n    {\n      \"description\": \"Risk description\",\n      \"mitigation\": \"Mitigation strategy\"\n    }\n  ],\n  \"entryCriteria\": [\"Entry criteria 1\"],\n  \"exitCriteria\": [\"Exit criteria 1\"],\n  \"suspensionCriteria\": [\"Suspension criteria 1\"],\n  \"deliverables\": [\"Deliverable 1\"]\n}"
- role: user
  text: "# Project: fixture-project\n\nScope: auth module\n\n## Project context (auto-generated)\n\nFixture summary used for snapshot tests.\n\n## Relevant code\n\n--- chunk 1 | function `login` (lines 10–25) ---\nfunction login(creds) { return verify(creds); }\n\n\n--- chunk 2 | class `SessionStore` (lines 30–60) ---\nclass SessionStore { /* ... */ }\n\n\n\n\n[CRITICAL INSTRUCTION] You MUST now invoke the `emit_test_plan` tool with the structured plan.\nThe JSON payload MUST have exactly these keys (and no others):\n{\n\"summary\": \"One-paragraph overview of the test plan\",\n\"objectives\": [\"Objective 1\"],\n\"scope\": {\n\"inScope\": [\"Module/feature in scope\"],\n\"outOfScope\": [\"Module/feature out of scope\"]\n},\n\"strategy\": \"Description of the test strategy\",\n\"testLevels\": [\"unit | integration | system | e2e | acceptance\"],\n\"testTypes\": [\"functional | performance | security | usability | reliability | compatibility | regression\"],\n\"environments\": [\"Environment 1\"],\n\"risks\": [\n{\n\"description\": \"Risk description\",\n\"mitigation\": \"Mitigation strategy\"\n}\n],\n\"entryCriteria\": [\"Entry criteria 1\"],\n\"exitCriteria\": [\"Exit criteria 1\"],\n\"suspensionCriteria\": [\"Suspension criteria 1\"],\n\"deliverables\": [\"Deliverable 1\"]\n}\n`scope` is a nested OBJECT with `inScope` and `outOfScope` arrays — not flat top-level keys. `testLevels` and `testTypes` only accept the enum values listed above.\nDo NOT output fields from the codebase (like architect, location, timeline, bhk_display, category, etc.) at the top level. You MUST use only the keys listed above. Do NOT reply with free-form prose, apologies, or explanations. You MUST invoke the tool."
